# UConnect

./: CMakeLists.txt
PluginTester/: CMakeLists.txt  PluginTester.pro  main.cpp
USystemAgent/: AgentService.pro  Bootstrap.cpp  Bootstrap.h  CMakeLists.txt  main.cpp
USystemAgent/crypto/: X509Csr.cpp  X509Csr.h
USystemAgent/network/: HttpClientBase.cpp  HttpClientBase.h  HttpClientCert.cpp  HttpClientCert.h  HttpClientTask.cpp  HttpClientTask.h
USystemAgent/service/: LocalService.cpp  LocalService.h
USystemAgent/task/: Task.h  TaskExecutor.cpp  TaskExecutor.h  TaskQueue.cpp  TaskQueue.h
USystemAgent/utils/: Utils.cpp  Utils.h
USystemService/: CMakeLists.txt  USystemService.pro  main.cpp
USystemService/network/: HttpClient.cpp  HttpClient.cpp_backup  HttpClient.h  HttpClient.h_backup  TcpServer.cpp  TcpServer.h  WebsocketClient.cpp  WebsocketClient.h
USystemService/service/: LocalService.cpp  LocalService.h  RemoteService.cpp  RemoteService.h
USystemService/tasks/: Task.h  TaskExecutor.cpp  TaskExecutor.h  TaskQueue.cpp  TaskQueue.h
lib/plugins/: CMakeLists.txt  plugins.pro
lib/plugins/libTask/: CMakeLists.txt  ITaskPlugin.h  ITaskPlugin.pri  ITaskPlugin.pro  ITaskPlugin_global.h  ITaskPlugin_impl.cpp
lib/plugins/libTaskBaseSystemAudit/: TaskBaseSystemAudit.pro  TaskBaseSystemAudit_global.h  TaskPlugin.h
lib/plugins/libTaskBaseSystemMonitoring/: CMakeLists.txt  TaskBaseSystemMonitoring.pro  TaskBaseSystemMonitoring_global.h  TaskPlugin.cpp  TaskPlugin.h
lib/plugins/libTaskCheckAlive/: CMakeLists.txt  TaskCheckAlive.pro  TaskCheckAlive_global.h  TaskPlugin.cpp  TaskPlugin.h
lib/plugins/libTaskCpuDeviceAudit/: CMakeLists.txt  TaskCpuDeviceAudit.pro  TaskCpuDeviceAudit_global.h  TaskPlugin.cpp  TaskPlugin.h
lib/plugins/libTaskDisplayDeviceAudit/: CMakeLists.txt  TaskDisplayDeviceAudit.pro  TaskDisplayDeviceAudit_global.h  TaskPlugin.cpp  TaskPlugin.h
lib/plugins/libTaskDisplayDeviceAudit/win/: WinUtils.cpp  WinUtils.h  Wmi.cpp  Wmi.h
lib/plugins/libTaskDownloadFile/: TaskDownloadFile.pro  TaskDownloadFile_global.h  TaskPlugin.h
lib/plugins/libTaskDriveDeviceAudit/: TaskDriveDeviceAudit.pro  TaskDriveDeviceAudit_global.h  TaskPlugin.h
lib/plugins/libTaskExecuteCommand/: TaskExecuteCommand.pro  TaskExecuteCommand_global.h  TaskPlugin.h
lib/plugins/libTaskGpuDeviceAudit/: TaskGpuDeviceAudit.pro  TaskGpuDeviceAudit_global.h  TaskPlugin.h
lib/plugins/libTaskInitRemoteDesktopConnection/: TaskInitRemoteDesktopConnection.pro  TaskInitRemoteDesktopConnection_global.h  TaskPlugin.h
lib/plugins/libTaskLocalNetworkAudit/: CMakeLists.txt  TaskItem.h  TaskLocalNetworkAudit.pro  TaskLocalNetworkAudit_global.h  TaskPlugin.cpp  TaskPlugin.h
lib/plugins/libTaskLocalNetworkAudit/include/: Defines.h
lib/plugins/libTaskLocalNetworkAudit/include/utils/: NetworkUtils.cpp  NetworkUtils.h  Utils.cpp  WindowsUtils.cpp  WindowsUtils.h
lib/plugins/libTaskLocalNetworkAudit/include/wmi/: Wmi.cpp  Wmi.h
lib/plugins/libTaskNetworkDeviceAudit/: CMakeLists.txt  TaskNetworkDeviceAudit.pro  TaskNetworkDeviceAudit_global.h  TaskPlugin.cpp  TaskPlugin.h
lib/plugins/libTaskNetworkDeviceAudit/include/: Arp.h
lib/plugins/libTaskNetworkDeviceAudit/include/utils/: Utils.h
lib/plugins/libTaskProcessMonitoring/: TaskPlugin.h  TaskProcessMonitoring.pro  TaskProcessMonitoring_global.h
lib/plugins/libTaskScreenshot/: TaskPlugin.cpp  TaskPlugin.h  TaskScreenshot.pro  TaskScreenshot_global.h
lib/plugins/libTaskServiceAudit/: TaskPlugin.h  TaskServiceAudit.pro  TaskServiceAudit_global.h
lib/plugins/libTaskSnmpMonitoring/: CMakeLists.txt  TaskItem.h  TaskPlugin.cpp  TaskPlugin.h  TaskSnmpMonitoring.h  TaskSnmpMonitoring.pro
lib/plugins/libTaskSoftAudit/: TaskPlugin.h  TaskSoftAudit.pro  TaskSoftAudit_global.h
lib/plugins/libTaskUpdate/: TaskPlugin.cpp  TaskPlugin.h  TaskUpdate.pro  TaskUpdate_global.h
lib/plugins/libTaskUpdateAgent/: CMakeLists.txt  TaskPlugin.h  TaskUpdateAgent.pro  TaskUpdateAgent_global.h
lib/plugins/libTaskUpdateClientCert/: TaskPlugin.h  TaskUpdateClientCert.pro  TaskUpdateClientCert_global.h
lib/plugins/libTaskUploadFile/: TaskPlugin.h  TaskUploadFile.pro  TaskUploadFile_global.h
lib/plugins/libTaskVmHyperVSystemAudit/: TaskPlugin.h  TaskVmHyperVSystemAudit.pro  TaskVmHyperVSystemAudit_global.h
lib/plugins/libTaskVmHyperVSystemMonitoring/: TaskPlugin.h  TaskVmHyperVSystemMonitoring.pro  TaskVmHyperVSystemMonitoring_global.h
lib/plugins/libTaskVmWareSystemAudit/: TaskPlugin.h  TaskVmWareSystemAudit.pro  TaskVmWareSystemAudit_global.h
lib/plugins/libTaskVmWareSystemMonitoring/: TaskPlugin.h  TaskVmWareSystemMonitoring.pro  TaskVmWareSystemMonitoring_global.h
lib/qtservice/: CMakeLists.txt  qtservice.pri
lib/snmp++_unix/: CMakeLists.txt  IPv6Utility.cpp  auth_priv.cpp  libsnmp.h  snmp++_unix.pro  target.cpp
lib/snmp++_unix/snmp_pp/: config.h  target.h  userdefined.h
lib/snmp++_win/: CMakeLists.txt  IPv6Utility.cpp  address.cpp  ctr64.cpp  libsnmp.h  uxsnmp.cpp
lib/snmp++_win/snmp_pp/: IPv6Utility.h  config_snmp_pp.h
lib/spdlog/: CMakeLists.txt  spdlog.h  spdlog.pro
