cmake_minimum_required(VERSION 3.14)

project(plugins LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

#add_subdirectory(libTask)
add_subdirectory(libTaskBaseSystemAudit/)
add_subdirectory(libTaskBaseSystemMonitoring/)
add_subdirectory(libTaskCheckAlive/)
add_subdirectory(libTaskCpuDeviceAudit/)
add_subdirectory(libTaskDisplayDeviceAudit/)
add_subdirectory(libTaskDownloadFile/)
add_subdirectory(libTaskDriveDeviceAudit/)
add_subdirectory(libTaskExecuteCommand/)
add_subdirectory(libTaskGpuDeviceAudit/)
add_subdirectory(libTaskInitRemoteDesktopConnection/)
add_subdirectory(libTaskLocalNetworkAudit/)
add_subdirectory(libTaskNetworkDeviceAudit/)
add_subdirectory(libTaskProcessMonitoring/)
add_subdirectory(libTaskScreenshot/)
add_subdirectory(libTaskServiceAudit/)
add_subdirectory(libTaskSnmpMonitoring/)
add_subdirectory(libTaskSoftAudit/)
add_subdirectory(libTaskUpdate/)
add_subdirectory(libTaskUpdateAgent/)
add_subdirectory(libTaskUpdateClientCert/)
add_subdirectory(libTaskUploadFile/)
add_subdirectory(libTaskVmHyperVSystemAudit/)
add_subdirectory(libTaskVmHyperVSystemMonitoring/)
add_subdirectory(libTaskVmWareSystemAudit/)
add_subdirectory(libTaskVmWareSystemMonitoring/)


